change production config

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -2,9 +2,12 @@
     padding: 0;
     margin: 0;
 }
-html,
-body {
+html{
     background-color: #f9f9f9;
+}
+
+body{
+    font-size:12px;
 }
 
 ul {
