--- a/src/less/index.less
+++ b/src/less/index.less
@@ -2,23 +2,15 @@
     padding: 0;
     margin: 0;
 }
-html{
+html {
     background-color: #f9f9f9;
 }
-
-body{
-    font-size:12px;
+body {
+    font-size: 14px;
+    font-family: myFirstFont;
 }
 
-ul {
-    li {
-        width: 100px;
-        height: 100px;
-        &:nth-child(1) {
-            background: url('../statics/imgs/01.png');
-        }
-        &:nth-child(2) {
-            background: url('../statics/imgs/02.jpg');
-        }
-    }
+@font-face {
+    font-family: myFirstFont;
+    src: url('../statics/fonts/DINPro_Regular.ttf'); /* IE9+ */
 }
